# rescript-ssg

./: .c8rc.json  .gitignore  CHANGELOG.md  Makefile  README.md  bsconfig.json  dune  dune-project  package-lock.json  package.json  package.opam  rescript-ssg.opam  webpack.config.cjs
.github/workflows/: nodejs.yml
demo/: App.res  Component1.res  Component2.res  Index.res  Page1.res  Page2.res  SharedComponent.res  index-static.html  index.html
example/: dune
example/src/: Build.re  Build.res  BuildHelper.res  Content.re  Content.res  Content_Css.re  Content_Css.res  Env.re  Env.res  ExampleBuild.re  ExampleBuild.res  ExampleGlobalCss.ml  ExampleIndex.re  ExampleIndex.res  ExampleIndex_Css.ml  ExamplePage1.re  ExamplePage1.res  ExamplePage1_Css.ml  ExamplePage2.re  ExamplePageDynamic.re  ExamplePages.re  ExampleSharedModule.re  ExampleSharedModule.res  ExampleStart.re  ExampleWrapper.re  ExampleWrapper1.re  ExampleWrapperWithData.re  Footer.re  Footer.res  GlobalCss.res  Global_Css.re  Global_Css.res  Header.re  Header.res  Index.re  Index.res  Index_Css.ml  Index_Css.res  Link.re  Link.res  (+37 more)
example/src/commands/: Build.re  BuildHelper.re  BuildHelper.res  BuildWithEsbuildPlugin.re  BuildWithEsbuildPlugin.res  BuildWithTerser.re  BuildWithTerser.res  BuildWithTerserPluginWithEsbuild.re  BuildWithTerserPluginWithEsbuild.res  BuildWithTerserPluginWithSwc.re  BuildWithTerserPluginWithSwc.res  Start.re  Start.res
shared/: Bindings.re  Bundler.re  EnvParams.re  NodeLoader.re  Utils.re  dune
src/: BigJson.re  Bin.re  BuildPageWorker.re  BuildPageWorkerHelpers.re  BuildPageWorkerT.re  Bundler.re  CliArgs.re  Commands.re  Debounce.re  EnvParams.re  Example.res  FileWatcher.re  GlobalValues.re  GracefulShutdown.re  Log.re  NodeLoader.re  PageBuilder.re  PageBuilder.res  PageBuilderJs.re  PageBuilderT.re  PagePath.re  PartialHydration.re  PathUtils.re  ProxyServer.re  RebuildPageWorker.re  RebuildPageWorkerHelpers.re  RebuildPageWorkerT.re  RenderedPage.re  SrcPath.re  Utils.re  Utils.res  Watcher.re  Webpack.re  WithHydration.re  WithHydrationContext.re  bin.mjs  builder.mjs  default-template.html  dune  node-loader.mjs
src/bindings/: Array.re  Base32Encode.re  Buffer.re  ChildProcess.re  Chokidar.re  Chokidar.res  Crypto.re  DependencyTree.re  Emotion.re  Esbuild.re  Fs.re  HashWasm.re  Jsesc.re  NodeOs.re  Path.re  Performance.re  Process.re  Promise.re  Promise.res  ReactHelmet.re  Set.re  Util.re  WorkerThreads.re  WorkingThreads.re  XXHash.re
src/js/: bin.mjs  node-loader.mjs  utils.mjs
src/shared/: PageBuilder.re  dune
src/shared/bindings/: Set.re
ssg/: BuildPageWorkerHelpers.re  Commands.re  PageBuilder.re  Utils.re  Webpack.re  dune
ssg/bindings/: ChildProcess.re  Chokidar.re  Esbuild.re  Path.re  Process.re  Promise.re
tests/: Tests.re  Tests.res  dune
tests/fixtures/: TestPage.re  TestPage.res  TestPageWithData.re  TestPageWithData.res  TestWrapper.re  TestWrapper.res  TestWrapperWithData.re  TestWrapperWithData.res
