opam-version: "2.0"
name: "builder"
synopsis: "static pages generator"
maintainer: "Denis Strelkov <strelkov.d.d@gmail.com>"
authors: "Denis Strelkov <strelkov.d.d@gmail.com>"
depends: [
  "dune" {>= "2.7" & < "3"}
  "ocaml" {= "4.06.1"}
  "ocaml-lsp-server" {= "1.4.1"}
  "ocamlformat" {= "0.13.0"}
  "reason" {= "3.6.0"}
  "merlin" {= "3.4.0"}
]
